[tool.poetry]
name = "goap"
version = "0.0.0"
description = "Goal-Oriented Action Planning AI"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
